# non-circular-gears

./: .gitignore  LICENSE.md  README.md
binary_images/animal_fly/: bird16.tif  flyingbird17.tif
binary_images/animal_land/: deer1.tif  rabbit9.tif
binary_images/animal_sea/: dolphine89.tif  fish25.tif
binary_images/cat/: cat65.tif  cat74.tif
binary_images/fish/: fish27.tif  fish75.tif  fish99.tif
binary_images/leopard/: leopard11.tif  leopard79.tif
binary_images/tortoise/: tortoise28.tif
cpp_helpers/: CMakeLists.txt  echo.cpp  endian_test.cpp  polygon_reader.cpp  turning_function.cpp
cpp_helpers/turning_function/: CMakeLists.txt  function.cpp  function.h  geometry.cpp  geometry.h  main.cpp
fabrication/the_man_no_teeth/: max_scene_template.max
fabrication_part/: fabircation_part.docx
matlab_dual_gear/: compute_dual_gear.m  test_gear.m
opengl/: CMakeLists.txt  GearDisplay.cpp  GearDisplay.h  GearFunction.cpp  GearFunction.h  Shader.cpp  Shader.h  main.cpp  utility.cpp  utility.h
opengl/shaders/: gear.vert
python_dual_gear/: README.md  animation.py  annimation.py  compute_dual_gear.py  compute_shape_center.py  debug_util.py  dtw.py  examples.py  fabrication.py  figure_config.py  folders_to_optimize.txt  gear_tooth.py  gen_dual_shapes.py  limit_phi.py  main_program.py  matplotlibTest.py  models.py  models.yaml  objective_function.py  opt_dual_shapes.py  opt_groups.py  optimization.py  optimization_config.yaml  phisical_size.py  picture_to_video.py  plot_functions.py  plot_sampled_function.py  radon_transform.py  report.py  requirements.yml  shape_factory.py  shape_processor.py  test_gear.py  test_parallel.py  testing.py  textures.yaml  util_functions.py  wrong.py
python_dual_gear/core/: compute_dual_gear.py  dual_optimization.py  objective_function.py  optimization.py  optimize_dual_shapes.py  phi_shape_average.py  plot_sampled_function.py  rotate_and_carve.py
python_dual_gear/drive_gears/: circular_gear.py  ellipse_gear.py  focal_ellipse_gear.py  generate_standard_shapes.py  models.py  models.yaml  shape_factory.py  shape_processor.py  standard_shapes.py
python_dual_gear/optimization/: optimization.py
python_dual_gear/plot/: animation.py  plot_sampled_function.py  plot_util.py  qt_plot.py  qt_textures.py
python_dual_gear/temp/: gen_new_models.py  print_input.py
silhouette/: airplane.txt  aixinyu.txt  boy.txt  butterfly.txt  chicken_leg.txt  clip_path_generator  ellipse.txt  errors.txt  france.txt  girl.txt  horse.txt  irregular_circle.txt  mahou.txt  mahou2.txt  spiral_circle.txt  spiral_circle_convex.txt  square.txt  test.txt  tiejiayong.txt  united_states.txt  wolf.txt
silhouette/animal_fly/: bird-16.txt  bird-7.txt  bird16.tif  bird41.txt  butterfly (2).txt  flyingbird17.tif  owl3.txt  owl5.txt
silhouette/animal_land/: bear5.txt  cat1.txt  cat10.txt  chicken-8.txt  cow19.txt  deer1.txt  dog head.txt  dog.txt  dog75.txt  hen3.txt  hen4.txt  monkeyhead1.txt  mouse1.txt  mouse2.txt  rabbit27.txt  rabbit9.txt  rabbti24.txt  rat100.txt  tortoise1.tif  tortoise1.txt  tortoise23.txt  tortoise84.txt
silhouette/animal_sea/: 11egg.txt  dolphine89.txt  duck81.txt  fish.txt  fish27.tif  fish27.txt  fish54.txt  fish99.txt  fish_2.txt  flatfish-1.txt  turtle2.txt
silhouette/countries/: maple.txt
silhouette/creatures/: cat.txt
silhouette/disney/: minnie.txt
silhouette/food/: bond1.txt  bond4.txt  hen leg.txt  rabbit carrot2.txt
silhouette/human/: bell.txt  boy.txt  candy.txt  car (2).txt  guitar-2.txt  personal_car-9.txt  pistol.txt  pot.txt  shoe-3.txt  wingsuit.txt
silhouette/new/: bat.txt  chinese_cup.txt  gun.txt  (+8 more)
(+2001 files in other folders)
